--- a/mtm1531/assignment-3/css/general.css
+++ b/mtm1531/assignment-3/css/general.css
@@ -1,3 +1,35 @@
+
 @charset "utf-8";
 /* CSS Document */
+html {
+	background-color: #eaf2df;
+}
 
+body {
+	width: 50em;
+	margin: 0 auto;	
+}
+
+fieldset {
+	margin: 10px 0 7px 0;
+}
+	
+div {
+	margin: 7px;
+}
+
+input:invalid {
+	color:#FF0000;
+}
+
+input:valid {
+	background-color: #dbdbdb;
+	color: #030;	
+}
+
+input:focus {
+	
+	background-color: #f7f7e4;
+	box-shadow: 1px 1px 3px rgba(0,153,51, 0.4);
+	
+}
