--- a/mtm1526/assignment-2/css/general.css
+++ b/mtm1526/assignment-2/css/general.css
@@ -1,8 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
 
+ul li {
+	color:#330099;
+}
+
 .current {
 	
 	z-index: 2000;
 	text-decoration:line-through;
+	color: #F33;
 }
