--- a/mtm1526/assignment-3/css/simple-app.css
+++ b/mtm1526/assignment-3/css/simple-app.css
@@ -1,6 +1,21 @@
 @charset "utf-8";
 /* CSS Document */
 
+html {
+	background-color:#e8f0dd;
+}
+
+body {
+	width: 42em;
+	margin: 14px auto;
+	padding: 21px;
+	background-color: #cddeb6;
+	border: 3px solid #aab897;
+	
+}
+
+
+
 div {
 	margin: 91px;
 	width: 224px;
@@ -9,8 +24,9 @@ div {
 	background-color:#3Fb;
 	border: 7px solid #000;
 	text-align:center;
-	line-height: 21px;
+	line-height: 14px;
 }
+
 div h1 {
 	font-size: 8em;
 }
