added c and d.html edited paragraph b.html added padding to a div class added linking logic for c and d.html in the js file

--- a/mtm1526/assignment-4/css/general.css
+++ b/mtm1526/assignment-4/css/general.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 html {
-	background-color: #8a9c78;
+	background-color: #f7f7f7;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
 }
 
 #fillme  {
-	padding: 4px;
+	padding: 7px;
 	background-color: #cee0bc;
 }
 
