--- a/mtm1526/assignment-4/css/general.css
+++ b/mtm1526/assignment-4/css/general.css
@@ -11,19 +11,32 @@ body {
 	
 }
 
+
+
 #total {
 	background-color:#a9bf93;
 	padding: 3em 3em 3em 3em;
 	border:2px solid #030;
 	border-radius: 7px;
+	
 }
 
 #fillme  {
 	padding: 7px;
+	
 	background-color: #cee0bc;
 }
-
+#all-buttons {
+	background-color: #cee0bc;
+	margin-right: -7px;
+}
 .buttons {
 	display: inline;
+	padding: 0;
+	margin: 0;
+	margin-left: -7px;
+	
+	
 }
+	
 
