--- a/mtm1526/assignment-6/css/general.css
+++ b/mtm1526/assignment-6/css/general.css
@@ -30,7 +30,7 @@ nav a:visited {
 	border-radius: 4px 4px 0 0;
 	background-color: #e2e2e2;
 	text-decoration:none;
-	padding: 0.5em 1em;
+	/*padding: 0.5em 1em;*/
 	color: #000;
 }
 
